# implicit-interaction-intelligence

./: .dockerignore  .dvcignore  .editorconfig  .env.example  .env.providers.example  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  .release-please-config.json  .semgrepignore  .sigstore.yaml  .trivyignore  ADVANCEMENT_PLAN.md  BRIEF_ANALYSIS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT_REPORT.md  COMPLETENESS_AUDIT_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  Dockerfile.mcp  HUAWEI_PITCH.md  LICENSE  Makefile  NOTES.md  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SLSA.md  SUPPLY_CHAIN.md  THE_COMPLETE_BRIEF.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  flake.nix  (+6 more)
.dagger/: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.dvc/: config
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/allstar/: allstar.yaml  security.yaml  (+1 more)
.internal/: ADVANCEMENT_PLAN.md  BRIEF_ANALYSIS.md  NOTES.md
.tilt/: README.md
backstage/: catalog-info.yaml
benchmarks/: README.md  __init__.py  conftest.py  locustfile.py  slos.yaml  test_edge_runtime_matrix.py  test_encoder_latency.py  test_pipeline_latency.py  test_router_latency.py  test_sanitizer_throughput.py  test_slm_latency.py
configs/: default.yaml  demo.yaml  mcp_server_config.json  observability.yaml  v2.yaml
dagger/: __init__.py  dagger.json  main.py
data/: knowledge_graph.json
demo/: pre_seed.py  profiles.py  scenarios.py  seed_data.py
deploy/: README.md  skaffold.yaml
docker/: Dockerfile.dev  Dockerfile.wolfi  README.md  entrypoint.sh  healthcheck.sh  wolfi-README.md
docs/: INTERVIEW_DEMO.md  TECHNICAL_REPORT.md  changelog.md  data_card.md  edge_profiling_report.md  executive_summary.md  glossary.md  index.md  model_card.md
i3/: __init__.py  config.py
notebooks/: 01_perception_keystroke_dynamics.ipynb  02_tcn_encoder_from_scratch.ipynb  03_three_timescale_user_model.ipynb  04_cross_attention_conditioning_centrepiece.ipynb  05_contextual_thompson_sampling.ipynb  06_privacy_by_architecture.ipynb  07_edge_profiling_and_quantisation.ipynb  README.md  _build_notebooks.py
reports/: FIXES_2026-04-23.md  README.md  SECURITY_REVIEW_INDEX.md  conditioning_sensitivity.json  conditioning_sensitivity.md  edge_profile.json  edge_profile.md  edge_profile_2026-04-28.md  evaluation.json  iter_test_sweep.md  orchestration.json  redteam.json  redteam.md  redteam_eval.json  redteam_eval.md  redteam_security_review.json  redteam_security_review.md  security_review_verify.json  security_review_verify.md  slm_v2_eval.json  slm_v2_eval.md  verification_20260424T173805Z.json  verification_20260424T173805Z.md  verification_20260424T185603Z.json  verification_20260424T185603Z.md  verification_20260424T190940Z.json  verification_20260424T190940Z.md  verification_latest.json  verification_latest.md  verification_pass1.md  verification_pass2.json  verification_pass2.md  verification_pass3.md  verification_pass4_strict.md
scripts/: README.md  analyse_sae.py  deep_real_user_emulation.py  export_diary_to_parquet.py  export_onnx.py  export_user_gdpr.py  generate_encryption_key.py  mcp_client_smoke.py  measure_edge.py  orchestration_progress.py  probe_state_badge.py  probe_state_badge_lite.py  profile_edge.py  record_backup_demo.py  run_ablation_study.py  run_all_tests.sh  run_analytics_dashboard.py  run_benchmarks.py  run_closed_loop_eval.py  run_demo.sh  run_dpo_training.py  run_everything.py  run_federated_demo.py  run_four_phases.py  run_guardrails_demo.py  run_hrv_demo.py  run_interpretability_study.py  run_llm_judge.py  run_multimodal_demo.py  run_preflight.sh  run_redteam.py  run_redteam_notorch.py  setup.sh  train_safety_classifier.py  train_with_tracking.py  ui_smoke_test.py  uv_bootstrap.sh  verify_all.py  verify_numbers.py  verify_onnx.py  (+2 more)
server/: __init__.py  app.py  auth.py  middleware.py  routes.py  routes_accessibility.py  routes_admin.py  routes_benchmarks.py  routes_biometric.py  routes_edge.py  routes_explain.py  routes_flow.py  routes_gaze.py  routes_health.py  routes_inference.py  routes_personalisation.py  routes_playground.py  routes_preference.py  routes_profile.py  routes_routing.py  routes_translate.py  routes_tts.py  routes_whatif.py  websocket.py
tests/: README.md  conftest.py  test_ablation_statistics.py  test_accessibility_mode_state.py  test_adaptation_axes_alignment.py  test_adaptation_chaos_fuzz.py  test_adaptation_vector.py  test_adaptive_compute_router.py  test_advanced_ui_static.py  test_affect_property.py  test_agentic_core_models.py  test_analytics.py  test_auth.py  test_aux_losses.py  test_bandit.py  test_bandit_concurrency.py  test_bandit_convergence.py  test_bandit_invariants.py  test_baseline_tracker.py  test_biometric_match_dataclass.py  test_bpe_corner_cases.py  test_browser_inference_endpoint.py  test_cedar_authz.py  test_chat_chip_css_classes.py  test_chat_js_chips.py  test_closed_loop_evaluator.py  test_cloud_error_taxonomy.py  test_cloud_multi_provider.py  test_cloud_prompt_builder.py  test_cognitive_load_dynamic_range.py  test_completion_dataclasses.py  test_config_schema.py  test_cost_cached_tokens.py  test_cost_pricing_integration.py  test_cost_tracker.py  test_cost_tracker_global.py  test_cost_tracker_integration.py  test_cost_tracker_reset_semantics.py  test_cost_tracker_threading.py  test_counterfactuals.py  (+120 more)
training/: build_intent_dataset.py  download_books.py  eval_intent.py  eval_redteam.py  eval_slm_v2.py  evaluate.py  generate_synthetic.py  prepare_corpus.py  prepare_dialogue.py  prepare_dialogue_v2.py  train_encoder.py  train_encoder_fabric.py  train_intent_gemini.py  train_intent_lora.py  train_maml.py  train_slm.py  train_slm_fabric.py  train_with_accelerate.py  train_with_deepspeed.py  train_with_ewc.py
web/: README_ADVANCED.md  index.html
(+705 files in other folders)
