#  ════════════════════════════════════════════════════════════════════════
#
#   Implicit Interaction Intelligence (I³)
#
#   An AI companion system that adapts to users from implicit interaction
#   signals — keystroke dynamics, linguistic complexity, temporal patterns.
#
#   Managed with Poetry (https://python-poetry.org/)
#
#  ════════════════════════════════════════════════════════════════════════

# ─── Build System ────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ─── Project Metadata ────────────────────────────────────────────────────
[tool.poetry]
name        = "implicit-interaction-intelligence"
version     = "0.1.0"
description = "Adaptive AI companion built from implicit interaction signals."
readme      = "README.md"
license     = "MIT"
authors     = ["Tamer Atesyakar <tamer.atesyakar@bk.ru>"]
maintainers = ["Tamer Atesyakar <tamer.atesyakar@bk.ru>"]
homepage    = "https://github.com/abailey81/implicit-interaction-intelligence"
repository  = "https://github.com/abailey81/implicit-interaction-intelligence"
documentation = "https://github.com/abailey81/implicit-interaction-intelligence/blob/main/docs/architecture/full-reference.md"
keywords = [
    "human-machine-interaction",
    "user-modelling",
    "small-language-model",
    "contextual-bandit",
    "edge-ai",
    "personalisation",
    "pytorch",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "i3" },
    { include = "server" },
    { include = "training" },
    { include = "demo" },
]
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "configs/*.yaml",
]

# ─── Runtime Dependencies ────────────────────────────────────────────────
# NOTE: Dependency floors reflect the findings of the A17 supply-chain audit:
#   * torch ≥ 2.6         — closes the weights_only bypass and JIT heap-
#                            buffer-overflow CVEs present in 2.0 – 2.5.
#   * cryptography ≥ 43.0 — closes PKCS#12 NULL deref (CVE-2024-26130) and
#                            OpenSSL wrapper EC-key CVEs fixed in 42.0.4.
#   * fastapi ≥ 0.115     — pulls starlette ≥ 0.40 (CVE-2024-47874 multipart
#                            DoS fixed).
#   * Unused direct declarations removed:
#       - scipy            (never imported — pulled transitively by sklearn)
#       - anthropic        (cloud client uses raw httpx against api.anthropic.com)
#       - websockets       (FastAPI/Starlette uses it transitively)
#       - python-multipart (no File/Form/UploadFile used anywhere in the code)
[tool.poetry.dependencies]
python = "^3.10"

# Deep learning stack
torch          = ">=2.6,<3.0"     # SEC: close weights_only + JIT CVEs
numpy          = "^1.24"
scikit-learn   = "^1.3"

# Web server
fastapi        = "^0.115"         # SEC: pulls starlette ≥ 0.40 (multipart DoS fix)
"uvicorn"      = { version = "^0.30", extras = ["standard"] }
httpx          = "^0.27"

# Configuration & data
pyyaml         = "^6.0.1"
pydantic       = "^2.6"
pydantic-settings = "^2.2"
aiosqlite      = "^0.20"

# Privacy
cryptography   = "^43.0"          # SEC: close PKCS#12 + OpenSSL EC CVEs

# ─── Development Dependencies ────────────────────────────────────────────
[tool.poetry.group.dev.dependencies]
pytest             = "^8.0"
pytest-asyncio     = "^0.23"
pytest-cov         = "^4.1"
pytest-xdist       = "^3.5"       # Parallel test execution
pytest-timeout     = "^2.2"
pytest-benchmark   = "^4.0"       # Micro-benchmarks with regression alerts
hypothesis         = "^6.100"     # Property-based testing
schemathesis       = "^3.30"      # REST contract tests from OpenAPI
syrupy             = "^4.6"       # Snapshot testing
jsonschema         = "^4.21"      # WebSocket protocol schema tests
mutmut             = "^2.5"       # Mutation testing
ruff               = "^0.3"
mypy               = "^1.9"
ipython            = "^8.22"
pre-commit         = "^3.6"

# ─── Observability Dependencies ──────────────────────────────────────────
# All observability packages are soft-imported by i3/observability/*; the
# service boots without them. Declared here so a dev install gets the full
# traces/metrics/logs triangle.
[tool.poetry.group.observability.dependencies]
structlog                                     = "^24.1"
prometheus_client                             = "^0.20"
opentelemetry-api                             = "^1.25"
opentelemetry-sdk                             = "^1.25"
opentelemetry-exporter-otlp                   = "^1.25"   # trace + metric OTLP
opentelemetry-instrumentation-fastapi         = "^0.46b0"
opentelemetry-instrumentation-httpx           = "^0.46b0"
opentelemetry-instrumentation-sqlite3         = "^0.46b0"
opentelemetry-instrumentation-logging         = "^0.46b0"
sentry-sdk                                    = { version = "^2.0", extras = ["fastapi"] }

# ─── MLOps Dependencies ──────────────────────────────────────────────────
# Soft-imported; used by i3/mlops, benchmarks/, and the training scripts.
[tool.poetry.group.mlops.dependencies]
mlflow            = "^2.11"                     # Experiment tracking
onnx              = "^1.16"                     # Graph validation
onnxruntime       = "^1.17"                     # Parity + INT8 inference
dvc               = { version = "^3.50", extras = ["s3"] }
locust            = "^2.24"                     # WebSocket + REST load testing
wandb             = { version = "^0.17", optional = true }

# ─── Advanced ML (PyTorch native 2026 stack) ─────────────────────────────
# Optional, soft-imported. ExecuTorch + torchao for edge; model-signing for
# OpenSSF v1.0 supply chain; Langfuse for LLM-specific observability.
[tool.poetry.group.ml-advanced.dependencies]
torchao        = ">=0.11"            # INT4/INT8 weight-only quantization
"model-signing"= ">=1.0"             # OpenSSF Model Signing v1.0 (April 2025)
executorch     = ">=0.4"             # On-device PyTorch runtime
langfuse       = ">=2.40"            # LLM tracing + cost tracking

# ─── Analytics Dependencies (2026 modern data stack) ─────────────────────
# Soft-imported by i3/analytics/*; the runtime service boots without them.
# Enables DuckDB-over-SQLite analytics, Polars streaming feature pipelines,
# LanceDB vector similarity search, portable Ibis expressions, and Arrow/
# Parquet interop — all without modifying the aiosqlite transactional path.
[tool.poetry.group.analytics.dependencies]
duckdb            = ">=1.0"
polars            = ">=1.0"
lancedb           = ">=0.11"
"ibis-framework"  = { version = ">=9.0", extras = ["duckdb"] }
pyarrow           = ">=15.0"

# ─── Distributed Training + High-Throughput Serving ─────────────────────
# All soft-imported by i3/serving/* and training/train_*_fabric|accelerate|
# deepspeed.py. The scale-up path: Fabric / Accelerate / DeepSpeed for
# multi-GPU and multi-node training, Ray Serve for replica-level
# autoscaling, Triton for multi-model dynamic batching, vLLM for high-
# throughput LLM serving once an export path exists.
#
# NOTE: vllm ships CUDA-only wheels (no CPU / no Windows) and pulls
# xformers + flash-attn transitively. It is declared as an optional extra
# so `poetry install --with distributed` still works on CPU-only or
# non-Linux dev boxes; use `poetry install --with distributed -E vllm`
# on CUDA Linux hosts.
[tool.poetry.group.distributed.dependencies]
lightning      = ">=2.3"             # Fabric (lightweight distributed)
accelerate     = ">=0.30"            # HuggingFace Accelerate path
"ray"          = { version = ">=2.10", extras = ["serve"] }
deepspeed      = ">=0.14"            # ZeRO-3 + CPU offload
vllm           = { version = ">=0.5", optional = true, markers = "platform_machine == 'x86_64' and sys_platform == 'linux'" }

[tool.poetry.extras]
vllm = ["vllm"]

# ─── Security Dependencies ───────────────────────────────────────────────
[tool.poetry.group.security.dependencies]
bandit           = { version = "^1.7", extras = ["toml"] }
"pip-audit"      = "^2.7"
safety           = "^3.0"
detect-secrets   = "^1.5"              # Used by pre-commit hook

# ─── Policy-as-Code Dependencies ─────────────────────────────────────────
# Soft-imported by i3/authz/cedar_adapter.py. Adds the Cedar policy engine
# binding so the application-level authorization layer (see
# docs/security/policy_as_code.md §2.3) can evaluate policies in-process.
# Cedar 4.x is required — 3.x lacks the schema-aware JSON request form
# used by the adapter.
[tool.poetry.group.policy.dependencies]
cedarpy          = ">=4.0"

# ─── Text-to-Speech Dependencies (optional) ──────────────────────────────
# Soft-imported by i3/tts/engine.py.  The package loads and the server
# serves the Web Speech API directive path without any of these — install
# `--with tts` only when server-side audio synthesis is required.
# See docs/research/adaptive_tts.md for the design rationale.
# ─── Universal LLM Provider Layer (Batch G7) ────────────────────────────
# Optional. Soft-imported by every i3/cloud/providers/*.py adapter. A
# minimal install (no provider SDK) still boots and routes to Anthropic
# via the existing CloudLLMClient. Install all to enable vendor-neutral
# routing via MultiProviderClient.
[tool.poetry.group.providers.dependencies]
openai               = ">=1.40"   # OpenAI + Azure OpenAI (base_url override)
"google-generativeai"= ">=0.7"
boto3                = ">=1.34"   # AWS Bedrock
mistralai            = ">=1.0"
cohere               = ">=5.0"
litellm              = ">=1.50"

# ─── Multimodal Extractors (Batch F-1 + F-2) ────────────────────────────
# Real runnable extractors for voice prosody + facial affect + PPG HRV;
# all soft-imported. Missing libs fall back to zero vectors with a warn.
[tool.poetry.group.multimodal.dependencies]
librosa                 = "^0.10"
soundfile               = "^0.12"
mediapipe               = "^0.10"
"opencv-python-headless" = "^4.9"
sounddevice             = "^0.4"

# ─── 2026 LLM Ecosystem (Batch D-2 / G4) ────────────────────────────────
# DSPy / NeMo Guardrails / Pydantic AI / Instructor / Outlines /
# Logfire / Traceloop. All soft-imported.
[tool.poetry.group.llm-ecosystem.dependencies]
"dspy-ai"        = "^2.5"
nemoguardrails   = "^0.11"
"pydantic-ai"    = "^0.0.13"
instructor       = "^1.6"
outlines         = "^0.1"
logfire          = { version = "^0.55", extras = ["fastapi", "httpx", "pydantic"] }
"traceloop-sdk"  = "^0.30"

# ─── Model Context Protocol (Anthropic's MCP server) ────────────────────
# Soft-imported by i3/mcp/*; required only to run the MCP server.
[tool.poetry.group.mcp.dependencies]
mcp = { version = ">=1.0", extras = ["cli"] }

# ─── Future-Work Tracks (Batches F-4 / F-5 / multi-modal federated) ─────
# Flower federated learning, Opacus DP-SGD. Soft-imported. Heavy, install
# only when actually training.
[tool.poetry.group.future-work.dependencies]
flwr    = ">=1.7"
opacus  = ">=1.4"

# ─── TTS (Batch F-TTS) ──────────────────────────────────────────────────
[tool.poetry.group.tts.dependencies]
pyttsx3       = { version = ">=2.90", optional = true }   # OS-native SAPI5/NSSS/espeak
"piper-tts"   = { version = ">=1.2",  optional = true }   # Rhasspy neural TTS (CPU)
kokoro        = { version = ">=0.1",  optional = true }   # Kokoro 82M open-weight TTS

# ─── Documentation Dependencies ──────────────────────────────────────────
[tool.poetry.group.docs.dependencies]
mkdocs                                   = "^1.5"
mkdocs-material                          = { version = "^9.5", extras = ["imaging"] }
mkdocstrings                             = { version = "^0.24", extras = ["python"] }
mkdocs-include-markdown-plugin           = "^6.0"
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-macros-plugin                     = "^1.0"
mkdocs-mermaid2-plugin                   = "^1.1"
mkdocs-minify-plugin                     = "^0.8"
mkdocs-glightbox                         = "^0.3"
pymdown-extensions                       = "^10.7"

# ─── CLI Entry Points ────────────────────────────────────────────────────
[tool.poetry.scripts]
i3-train-encoder = "training.train_encoder:main"
i3-train-slm     = "training.train_slm:main"
i3-evaluate      = "training.evaluate:main"
i3-generate-data = "training.generate_synthetic:main"
i3-serve         = "server.app:main"

# ═══════════════════════════════════════════════════════════════════════
#                         TOOL CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════

# ─── Testing (pytest) ────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion       = "8.0"
asyncio_mode     = "auto"
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--showlocals",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:torch.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-focused",
    "gpu: marks tests that require a GPU",
]

# ─── Coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
source       = ["i3", "server"]
branch       = true
parallel     = true
omit = [
    "*/tests/*",
    "*/demo/*",
    "*/__init__.py",
    "training/*",
]

[tool.coverage.report]
precision     = 2
show_missing  = true
skip_covered  = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstract",
]

# ─── Linting & Formatting (Ruff) ─────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
extend-exclude = [
    "data",
    "checkpoints",
    "web",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults (FastAPI pattern)
    "S101",   # Use of assert (fine in tests)
    "N812",   # Lowercase imported as non-lowercase (torch convention)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"    = ["S101", "S105", "S106"]  # Assert, hardcoded passwords in tests
"training/*" = ["S311"]                    # Standard random in training data
"demo/*"     = ["S311"]                    # Standard random in demo

[tool.ruff.lint.isort]
known-first-party = ["i3", "server", "training", "demo"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ─── Type Checking (Mypy) ────────────────────────────────────────────────
[tool.mypy]
python_version           = "3.10"
strict                   = false
warn_return_any          = true
warn_unused_configs      = true
warn_redundant_casts     = true
warn_unused_ignores      = true
disallow_untyped_defs    = false
check_untyped_defs       = true
ignore_missing_imports   = true
namespace_packages       = true
show_error_codes         = true
pretty                   = true
exclude = [
    "^tests/",
    "^demo/",
    "^training/",
    "^build/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "sklearn.*",
    "scipy.*",
    "aiosqlite.*",
]
ignore_missing_imports = true

# ─── Security Static Analysis (Bandit) ───────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "demo", "build", "dist"]
skips = ["B101"]  # assert_used — assertions are fine in our code
